force-app/main/default/objects/KimbleOne__ActivityAssignment__c/KimbleOne__ActivityAssignment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Activity Assignment</label>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>