force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ActivityAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Assignment</label>
    <referenceTo>KimbleOne__ActivityAssignment__c</referenceTo>
    <relationshipLabel>Activity Assignments</relationshipLabel>
    <relationshipName>ActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>