force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ActivityRole__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>KimbleOne__ActivityRole__c</referenceTo>
    <relationshipLabel>Activity Assignments</relationshipLabel>
    <relationshipName>Activity_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>