force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ActivityTimePattern__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityTimePattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Time Pattern</label>
    <referenceTo>KimbleOne__ActivityTimePattern__c</referenceTo>
    <relationshipLabel>Activity Assignments</relationshipLabel>
    <relationshipName>ActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>