force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__AllocatedUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocatedUsage__c</fullName>
    <label>Allocated Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>