force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__AssignmentMarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AssignmentMarginPercentage__c</fullName>
    <label>Assignment Margin Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>