force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__AssignmentPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AssignmentPercentage__c</fullName>
    <label>AssignmentPercentage</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>