force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__BaselineCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineCost__c</fullName>
    <label>Baseline Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>