force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__BaselineMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineMargin__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__BaselineRevenue__c) || KimbleOne__BaselineRevenue__c = 0 ),
( KimbleOne__BaselineRevenue__c - KimbleOne__BaselineCost__c ) / KimbleOne__BaselineRevenue__c, NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>