force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__BaselineMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineMarginAmount__c</fullName>
    <formula>IF ( NOT(ISBLANK(KimbleOne__BaselineRevenue__c) || ISBLANK(KimbleOne__BaselineCost__c)),KimbleOne__BaselineRevenue__c - KimbleOne__BaselineCost__c, NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baseline Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>