force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__BaselineRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineRevenue__c</fullName>
    <label>Baseline Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>