force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__BaselineUtilisationPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineUtilisationPercentage__c</fullName>
    <label>Baseline Utilisation</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>