force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__CandidateIsPreferred__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CandidateIsPreferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preferred</label>
    <type>Checkbox</type>
</CustomField>