force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__CandidateSource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CandidateSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AssignmentCandidateSource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Activity Assignments (Candidate Source)</relationshipLabel>
    <relationshipName>ActivityAssignmentsCandidateSource</relationshipName>
    <type>Lookup</type>
</CustomField>