force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__Case__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activity Assignments</relationshipLabel>
    <relationshipName>ActivityAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>