force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__Code__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Code__c</fullName>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>