force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__CostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CostRate__c</fullName>
    <inlineHelpText>Cost of this Resource to the Project/Activity, specified in the Units of the Project.</inlineHelpText>
    <label>Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>