force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__DefaultCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultCostRate__c</fullName>
    <label>Default Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>