force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__DefaultCostRatePercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultCostRatePercentage__c</fullName>
    <label>Default Cost Rate Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>