force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__EarliestExpenseItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestExpenseItemDate__c</fullName>
    <label>Earliest Expense Item</label>
    <type>Date</type>
</CustomField>