force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__EarliestScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestScheduledDate__c</fullName>
    <label>Earliest Scheduled Date</label>
    <type>Date</type>
</CustomField>