force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__EarliestTimeEntryDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestTimeEntryDate__c</fullName>
    <label>Earliest Time Entry</label>
    <type>Date</type>
</CustomField>