force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__EndingSoon__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndingSoon__c</fullName>
    <formula>IF (KimbleOne__ForecastP1EndDate__c &gt;= TODAY() &amp;&amp; KimbleOne__ForecastP1EndDate__c &lt;= TODAY() + 
BLANKVALUE($Setup.KimbleOne__KimbleOneConfigSetting__c.KimbleOne__EndingSoonTolerance__c,14), TRUE, FALSE)</formula>
    <label>Ending Soon</label>
    <type>Checkbox</type>
</CustomField>