force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__EntryRemainingUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntryRemainingUsage__c</fullName>
    <label>Entry Remaining Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>