force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__EntrySpecification__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntrySpecification__c</fullName>
    <label>Z_UpgradeHelper</label>
    <length>50</length>
    <type>Text</type>
</CustomField>