force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ExternalResourceId__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExternalResourceId__c</fullName>
    <label>External Resource Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>