force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastCostRate__c</fullName>
    <description>Cost Rate used in Forecasts. Calculated by application based on Cost Rate used in planning.</description>
    <label>Forecast Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>