force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastCostRateEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastCostRateEffectiveDate__c</fullName>
    <description>Effective date of Forecast Cost Rate change</description>
    <label>Forecast Cost Rate Effective Date</label>
    <type>Date</type>
</CustomField>