force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastInternalCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastInternalCostRate__c</fullName>
    <label>Forecast Internal Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>