force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastP1Cost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastP1Cost__c</fullName>
    <formula>if(ISBLANK(KimbleOne__ForecastP1EndDate__c),null,KimbleOne__ForecastCost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast P1 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>