force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastP1EndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastP1EndDate__c</fullName>
    <label>Forecast P1 End Date</label>
    <type>Date</type>
</CustomField>