force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastP2EndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastP2EndDate__c</fullName>
    <label>Forecast P2 End Date</label>
    <type>Date</type>
</CustomField>