force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastP2Revenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastP2Revenue__c</fullName>
    <formula>if(ISBLANK(KimbleOne__ForecastP2EndDate__c),null,KimbleOne__ForecastRevenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast P2 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>