force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastP3EndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastP3EndDate__c</fullName>
    <label>Forecast End Date</label>
    <type>Date</type>
</CustomField>