force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastP3Revenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastP3Revenue__c</fullName>
    <formula>KimbleOne__ForecastRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast P3 Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>