force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastRemainingRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRemainingRevenue__c</fullName>
    <label>Forecast Remaining Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>