force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastRemainingUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRemainingUsage__c</fullName>
    <description>Forecast Pn Usage where Pn determined from Delivery Group Probability</description>
    <formula>KimbleOne__ForecastUsage__c -  KimbleOne__TotalActualUsage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Usage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>