force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRevenue__c</fullName>
    <formula>KimbleOne__ForecastRemainingRevenue__c + KimbleOne__TotalActualRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>