force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__ForecastUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastUsage__c</fullName>
    <label>Forecast Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>