force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__GeoLocation__c</fullName>
    <label>Geo Location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>