force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__HasRevenueExchangeRateImpact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasRevenueExchangeRateImpact__c</fullName>
    <formula>TEXT(CurrencyIsoCode) != KimbleOne__InvoicingCurrencyIsoCode__c</formula>
    <label>Has Revenue Exchange Rate Impact</label>
    <type>Checkbox</type>
</CustomField>