force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__HoursPerDay__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HoursPerDay__c</fullName>
    <label>Hours Per Day</label>
    <precision>8</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>