force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__IncludeInRollUp__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IncludeInRollUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Roll Up</label>
    <type>Checkbox</type>
</CustomField>