force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__InternalInvoicingCurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InternalInvoicingCurrencyIsoCode__c</fullName>
    <label>Internal Invoicing Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>