force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__IntInvCcyDefaultInternalRevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyDefaultInternalRevenueRate__c</fullName>
    <label>IntInvCcyDefaultInternalRevenueRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>