force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__IntInvCcyForecastInternalRevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IntInvCcyForecastInternalRevenueRate__c</fullName>
    <label>Internal Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>