force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__InvoicingCcyForecastRemainingRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCcyForecastRemainingRevenue__c</fullName>
    <label>Invoicing Ccy Forecast Remaining Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>