force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__InvoicingCurrencyForecastRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyForecastRevenue__c</fullName>
    <formula>KimbleOne__InvoicingCcyForecastRemainingRevenue__c + KimbleOne__InvoicingCurrencyTotalActualRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Currency Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>