force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__InvoicingCurrencyInvoicingRevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyInvoicingRevenueRate__c</fullName>
    <label>Inv Ccy Invoicing Revenue Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>