force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__InvoicingRevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingRevenueRate__c</fullName>
    <label>Invoicing Revenue Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>