force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__IsNotificationSent__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsNotificationSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Sent to Resource?</label>
    <type>Checkbox</type>
</CustomField>