force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__IsUsageProfiled__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsUsageProfiled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Usage Profiled</label>
    <type>Checkbox</type>
</CustomField>