force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__LatestExpenseItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestExpenseItemDate__c</fullName>
    <label>Latest Expense Item Date</label>
    <type>Date</type>
</CustomField>