force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__LatestScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestScheduledDate__c</fullName>
    <label>Latest Scheduled Date</label>
    <type>Date</type>
</CustomField>