force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__LatestTimeEntryDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestTimeEntryDate__c</fullName>
    <label>Latest Time Entry Date</label>
    <type>Date</type>
</CustomField>