force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__LocationLatitude__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LocationLatitude__c</fullName>
    <formula>BLANKVALUE(KimbleOne__GeoLocation__Latitude__s, BLANKVALUE( KimbleOne__Location__r.KimbleOne__GeoLocation__Latitude__s, KimbleOne__ResourcedActivityOperatedWith__r.KimbleOne__Location__r.KimbleOne__GeoLocation__Latitude__s))</formula>
    <label>Location Latitude</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>