force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__LocationLongitude__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LocationLongitude__c</fullName>
    <formula>BLANKVALUE(KimbleOne__GeoLocation__Longitude__s, BLANKVALUE( KimbleOne__Location__r.KimbleOne__GeoLocation__Longitude__s, KimbleOne__ResourcedActivityOperatedWith__r.KimbleOne__Location__r.KimbleOne__GeoLocation__Longitude__s))</formula>
    <label>Location Longitude</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>