force-app/main/default/objects/KimbleOne__ActivityAssignment__c/fields/KimbleOne__LongNotes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LongNotes__c</fullName>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>